Add metadata server for pano_id to get links and use ejs to GET from url(only works in browser)

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,23 @@
   <li>Update single item by id: <br>PUT 140.118.155.33:9999/api/gmsdata/:id</li>
   <li>Delete single item by pano_id: <br>DELETE 140.118.155.33:9999/api/gmsdata/inner/:id</li>
   <li>Import an item: <br>POST 140.118.155.33:9999/api/gmsdata?pano_id:id&x:x&y:y</li>
-  <li>Delete all: <br>DELETE xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
+  <li>Delete all Gmsdatas: <br>DELETE xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
+  <li>See all Metadatas: <br>GET 140.118.155.33:9999/api/metadata</li>
+  <li>Get metadata item by pano_id<br>GET 140.118.155.33:9999/api/gmsdata/pano_id</li>
+  <li>Save a metadata with json: <br>POST 140.118.155.33:9999/api/metadata</li>
+  <li>Delete all Metadata: <br>DELETE xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</li>
   <li><a href="http://140.118.155.33:8888/tree">Edit Server codes</a></li>
   <li><a href="https://github.com/BoChengHuang/GMSData_Center">Source codes</a></li>
 </ul>
 <p>Reference:</p>
     <a href="https://scotch.io/tutorials/build-a-restful-api-using-node-and-express-4">REST API</a><br>
-    <a href="https://mlab.com/">Mlab for mongoDB</a><br>
-    <a href="http://hzchirs-blog.logdown.com/posts/212065-build-restful-web-api-by-using-nodejs-and-express4">API routes</a>
+    <a href="https://mlab.com/">MLab for mongoDB</a><br>
+    <a href="http://hzchirs-blog.logdown.com/posts/212065-build-restful-web-api-by-using-nodejs-and-express4">API routes</a><br>
+    <a href="http://www.embeddedjs.com/">EJS</a><br>
+    <a href="https://developer.mozilla.org/zh-TW/docs/HTTP/Access_control_CORS">Access-Control-Allow-Origin</a><br>
+    <a href="http://mongoosejs.com/">mongoosejs</a><br>
+    <a href="https://github.com/remy/nodemon">nodemon</a><br>
+
 
 </body>
 </html>
